2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-apps.c:
	* src/trackerd/tracker-apps.h:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-process-files.c: Removed the
	src/trackerd/tracker-apps.[ch] files because there is a module to
	do that now in the src/tracker-indexer code. The process-files
	module now won't try to index applications, but the process-files
	module is obsolete now anyway. All commented out code is
	marked with the comment FIXME-indexer-split.

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/main.c: Renamed to tracker-main.c

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-metadata.[ch]:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus-files.c: Moved the
	tracker-metadata.[ch] to the tracker-indexer directory, this also
	is a transitional state for some of this code. Some of the code
	from tracker-db.c has been commented out with #if 0 since it is
	being moved to the indexer at some point. All of this code is
	marked with the comment FIXME-indexer-split.

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* configure.ac: Changed the IOPRIO_SUPPORT to HAVE_IOPRIO since
	thats more consistent with naming conventions. 
	
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-ioprio.[ch]:
	* src/trackerd/Makefile.am: Moved the tracker-ioprio.[ch] to the
	indexer directory, they are only needed there. Also, moved the
	nice() function call to the indexer, the daemon doesn't need jthat
	either.  

	* src/tracker-indexer/main.c: Removed all command line options
	except verbosity and reindex, these will not be needed except for
	debugging generally. Also use the same jargon about copyright, etc