@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=org.freedesktop.TrackerIndexer
+Exec=@bindir@/tracker-indexer
