@@ -1,5 +1,14 @@
 2008-05-28  Martyn Russell  <martyn@imendio.com>
 
+	* data/Makefile.am:
+	* data/tracker-indexer.service.in:
+	* data/tracker.service.in: Added a service for the indexer to
+	start when we try to communicate with it. This is an initial step,
+	there launching the binary will not associate itself with the DBus
+	name in the session just yet.
+
+2008-05-28  Martyn Russell  <martyn@imendio.com>
+
 	* src/trackerd/Makefile.am:
 	* src/trackerd/tracker-apps.c:
 	* src/trackerd/tracker-apps.h:
